welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:11: error: illegal start of simple expression
    else return true
    ^